--- a/css/personal_site.css
+++ b/css/personal_site.css
@@ -1,3 +1,15 @@
 header {
     background: #4a79bf;
 }
+body:after {
+    content:"";
+    position: absolute;
+    z-index: -1;
+    top: 0px;
+    bottom: -1500px;
+    left: 50%;
+    border-left: 2px dotted #444; 
+    
+}
+
+
